FIX AL RECARGAR NO MOSTRABA LAS FACTURAS
- mostrar facturas al entrar,
- mantenerlas tras recargar,
- verlas también en otras cuentas/dispositivos.

--- a/index.html
+++ b/index.html
@@ -978,11 +978,11 @@
 
             try {
                 invoices = await loadInvoicesWithRetry();
-                render();
+                updateInvoiceList();
             } catch (error) {
                 console.error('No se pudieron cargar facturas al iniciar:', error);
                 invoices = [];
-                render();
+                updateInvoiceList();
             }
 
             const subscribe = () => {
@@ -991,7 +991,7 @@
                     invoicesRef,
                     (snapshot) => {
                         invoices = normalizeInvoices(snapshot.val());
-                        render();
+                        updateInvoiceList();
                     },
                     (error) => {
                         console.error('Error en listener de facturas:', error);
