--- a/index.html
+++ b/index.html
@@ -519,9 +519,55 @@
         .nav-link-btn:hover {
             color: var(--text-primary);
         }
+
+        .app-loading-overlay {
+            position: fixed;
+            inset: 0;
+            background: rgba(15, 23, 42, 0.55);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+            backdrop-filter: blur(3px);
+        }
+
+        .app-loading-card {
+            background: var(--bg-primary);
+            border: 1px solid var(--border-color);
+            color: var(--text-primary);
+            border-radius: 12px;
+            padding: 16px 20px;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            box-shadow: 0 12px 30px rgba(2, 6, 23, 0.2);
+        }
+
+        .app-spinner {
+            width: 18px;
+            height: 18px;
+            border: 2px solid rgba(37, 99, 235, 0.25);
+            border-top-color: #22c55e;
+            border-radius: 50%;
+            animation: appSpin 0.8s linear infinite;
+        }
+
+        .app-loading-hidden {
+            display: none;
+        }
+
+        @keyframes appSpin {
+            to { transform: rotate(360deg); }
+        }
     </style>
 </head>
 <body class="bg-white text-gray-900 min-h-screen flex flex-col">
+    <div id="appLoading" class="app-loading-overlay">
+        <div class="app-loading-card">
+            <div class="app-spinner"></div>
+            <div class="app-loading-text">Cargando...</div>
+        </div>
+    </div>
 
     
 
@@ -744,6 +790,20 @@
             return [];
         }
 
+        function showAppLoading(message) {
+            const overlay = document.getElementById('appLoading');
+            if (!overlay) return;
+            const text = overlay.querySelector('.app-loading-text');
+            if (text && message) text.textContent = message;
+            overlay.classList.remove('app-loading-hidden');
+        }
+
+        function hideAppLoading() {
+            const overlay = document.getElementById('appLoading');
+            if (!overlay) return;
+            overlay.classList.add('app-loading-hidden');
+        }
+
         async function waitForFirebaseReady(maxAttempts = 100) {
             for (let attempt = 0; attempt < maxAttempts; attempt++) {
                 if (window.firebaseAuth && window.firebaseAuthStateChanged && window.firebaseDB) {
@@ -755,11 +815,12 @@
         }
 
         // Verificar autenticación obligatoria con Firebase Auth
-        // OCULTAR TODO HASTA QUE SE VERIFIQUE
-        document.body.style.display = 'none';
+        // Mostrar loader hasta verificar sesion
+        showAppLoading('Verificando sesion...');
         (async function enforceAuthGuard() {
             const ready = await waitForFirebaseReady();
             if (!ready) {
+                hideAppLoading();
                 window.location.replace('login.html');
                 return;
             }
@@ -775,13 +836,13 @@
 
                 if (!userData) {
                     await window.firebaseAuth.signOut();
+                    hideAppLoading();
                     window.location.replace('login.html');
                     return;
                 }
 
                 localStorage.setItem('currentUser', JSON.stringify({ email: userData.email, role: userData.role }));
                 currentUser = { email: userData.email, role: userData.role };
-                document.body.style.display = '';
                 initInvoicesRealtime();
             });
         })();
@@ -1006,13 +1067,17 @@
             if (invoicesInitialized) return;
             invoicesInitialized = true;
 
+            showAppLoading('Cargando facturas...');
+
             try {
                 invoices = await loadInvoicesWithRetry();
                 updateInvoiceList();
+                hideAppLoading();
             } catch (error) {
                 console.error('No se pudieron cargar facturas al iniciar:', error);
                 invoices = [];
                 updateInvoiceList();
+                hideAppLoading();
             }
 
             const subscribe = () => {
